# ansinout

./: .gitignore  pyproject.toml  readme.md
src/ansinout/: __init__.py  keyboard.py  screen.py  tui.py
tests/: test.py
